--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
